# hearts-ai

./: .gitignore  AGENTS.md  AGENTS_V1.md  AGENTS_V2.md  AGENTS_V3.md  AGENTS_V3_BENCHMARK_REPORT.md  AGENTS_V4.md  AGENTS_V4_BOT_DEBUG_GUIDE.md  AGENTS_v3.md  BOT_HEURISTICS_PLAN.md  HEARTS_APP_LANDSCAPE.md  HEURISTIC_HELPERS.md  HEURISTIC_TAGS.md  LITERATURE_NOTES.md  NEXT_CHAT_PROMPT.md  README.md  ROADMAP.md  SEARCH_PHASE_PLAN.md  UI_AESTHETICS_PLAN.md  pyproject.toml
src/hearts_ai/: __init__.py  __main__.py  benchmarking.py  cli.py
src/hearts_ai/bots/: __init__.py  base.py  factory.py  heuristic_bot.py  random_bot.py  reasons.py  runtime.py
src/hearts_ai/engine/: __init__.py  cards.py  errors.py  game.py  record.py  rules.py  scoring.py  state.py  types.py
src/hearts_ai/protocol/: __init__.py  messages.py
src/hearts_ai/search/: __init__.py  candidates.py  evaluate.py  knowledge.py  memory.py  models.py  simulation.py  view.py  worlds.py
src/hearts_ai/server/: __init__.py  app.py  persistence.py  (+2 more)
tests/: test_benchmarking.py  test_bot_factory.py  test_bot_reasons.py  test_bot_runtime.py  test_bots.py  test_cli.py  test_engine_data_model.py  test_game_state_transitions.py  test_integration_simulation.py  test_protocol_messages.py  test_record_replay.py  test_rules.py  test_scoring.py  test_search_bot.py  test_search_candidates.py  test_search_evaluate.py  test_search_knowledge.py  test_search_memory.py  test_search_models.py  test_search_scenarios.py  test_search_simulation.py  test_search_worlds.py  test_server_app.py  test_server_tables.py  test_smoke.py
(+16 files in other folders)
