[project]
name = "hearts-ai"
version = "0.1.0"
description = "Hearts card game engine with bots and UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.10"]
ml = ["torch", "torchvision", "torchaudio"]
server = ["fastapi>=0.115", "uvicorn[standard]>=0.30"]
server-test = ["httpx>=0.27", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
